# KVCompression

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: default.yaml
config/experiments/: edge_cases.yaml  pass3_5_openai_narrativeqa.yaml  pass3_5_openai_trec.yaml  pass4_narrativeqa_4bins.yaml  pass4_trec_4bins.yaml  passy_gpu_backend.yaml  qmsum.yaml  sanity.yaml  sanity_fresh.yaml  sanity_var.yaml  sanity_var2.yaml  sanity_vllm.yaml  sanity_vllm_qwen1p5b.yaml  snapkv_longbench.yaml  submission.yaml  trec.yaml  vllm_signal_trec.yaml
docs/: blueprint_v1.md  blueprint_v2.md  decisions.md  deep-research-report.md  kv_params_cb.md  log.md  pass3report.md  pass4.md  pass_3_5.md  passx.md  passy.md  passy_completion_report.md  passy_report1.md  setup_gpu_vllm.sh
docs/.ipynb_checkpoints/: log-checkpoint.md
src/kv_transition/: __main__.py  cli.py  paths.py  settings.py
src/kv_transition/analysis/: aggregate.py  bootstrap.py  plots.py  queries.py  transition.py
src/kv_transition/data/: binning.py  longbench_loader.py  manifest.py  normalize.py  tokenizer.py
src/kv_transition/db/: connect.py  dao.py  schema.py
src/kv_transition/engines/: base.py  endpoints.py  kvfactory_engine.py  openai_compat.py
src/kv_transition/eval/: failure_taxonomy.py  metrics.py  score.py
src/kv_transition/report/: build.py
src/kv_transition/report/templates/: report.md.jinja
src/kv_transition/run/: orchestrate.py  retries.py  runner.py  telemetry.py
tests/: test_failure_taxonomy.py  test_report_prereqs.py
